src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwF1000-dhU-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: F1000\ndefault window height: U\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
